--- a/app/alurapic/public/index.html
+++ b/app/alurapic/public/index.html
@@ -24,6 +24,7 @@
     <!-- Modules -->
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controllers/fotos-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/foto-controller.js"></script>
     <script type="text/javascript" src="js/directives/diretivas.js"></script>
 
 </head>
