--- a/app/alurapic/public/index.html
+++ b/app/alurapic/public/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="js/lib/angular.min.js"></script>
     <script type="text/javascript" src="js/lib/angular-animate.min.js"></script>
     <script type="text/javascript" src="js/lib/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/lib/angular-resource.min.js"></script>
 
     <!-- Modules -->
     <script type="text/javascript" src="js/main.js"></script>
@@ -27,6 +28,8 @@
     <script type="text/javascript" src="js/controllers/foto-controller.js"></script>
     <script type="text/javascript" src="js/controllers/grupos-controller.js"></script>
     <script type="text/javascript" src="js/directives/diretivas.js"></script>
+    
+    <script type="text/javascript" src="js/services/meus-servicos.js"></script>
 
 </head>
 
